--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=5.6.4",
         "graham-campbell/markdown": "^7.0",
         "laravel/browser-kit-testing": "^1.0",
+        "laravel/dusk": "^1.0",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "styde/html": "~1.3"
