Funcionalidad para votar de forma positiva

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,8 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/0.0011e9f40f60fc7ed10c.hot-update.js": "/0.0011e9f40f60fc7ed10c.hot-update.js",
+    "/0.9813fbc6d4e5afb53c09.hot-update.js": "/0.9813fbc6d4e5afb53c09.hot-update.js",
+    "/0.0a8242985700d9a81f66.hot-update.js": "/0.0a8242985700d9a81f66.hot-update.js",
+    "/0.3033d8ffe790989c268f.hot-update.js": "/0.3033d8ffe790989c268f.hot-update.js"
 }
