--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,5 +4,30 @@
     "/0.0011e9f40f60fc7ed10c.hot-update.js": "/0.0011e9f40f60fc7ed10c.hot-update.js",
     "/0.9813fbc6d4e5afb53c09.hot-update.js": "/0.9813fbc6d4e5afb53c09.hot-update.js",
     "/0.0a8242985700d9a81f66.hot-update.js": "/0.0a8242985700d9a81f66.hot-update.js",
-    "/0.3033d8ffe790989c268f.hot-update.js": "/0.3033d8ffe790989c268f.hot-update.js"
+    "/0.3033d8ffe790989c268f.hot-update.js": "/0.3033d8ffe790989c268f.hot-update.js",
+    "/0.e8b0680cfc31c53ca4c6.hot-update.js": "/0.e8b0680cfc31c53ca4c6.hot-update.js",
+    "/0.61f9efc1826e038a62bc.hot-update.js": "/0.61f9efc1826e038a62bc.hot-update.js",
+    "/0.4e82db3da22e38f0e0e4.hot-update.js": "/0.4e82db3da22e38f0e0e4.hot-update.js",
+    "/0.68640ea7ed950a09d15f.hot-update.js": "/0.68640ea7ed950a09d15f.hot-update.js",
+    "/0.feb3460748c8f8f87c26.hot-update.js": "/0.feb3460748c8f8f87c26.hot-update.js",
+    "/0.e3c7ecf4de5c0e512f3e.hot-update.js": "/0.e3c7ecf4de5c0e512f3e.hot-update.js",
+    "/0.a2f97f98f8db17d47a95.hot-update.js": "/0.a2f97f98f8db17d47a95.hot-update.js",
+    "/0.72f1f2ac2b6a18ce3416.hot-update.js": "/0.72f1f2ac2b6a18ce3416.hot-update.js",
+    "/0.f8c559331c78a1552a7b.hot-update.js": "/0.f8c559331c78a1552a7b.hot-update.js",
+    "/0.720ad556d552784e40f6.hot-update.js": "/0.720ad556d552784e40f6.hot-update.js",
+    "/0.309bc1d9adc74ad8d036.hot-update.js": "/0.309bc1d9adc74ad8d036.hot-update.js",
+    "/0.fd51da29b8e6cd2af50d.hot-update.js": "/0.fd51da29b8e6cd2af50d.hot-update.js",
+    "/0.7a38b9b09e20cc8dd3d7.hot-update.js": "/0.7a38b9b09e20cc8dd3d7.hot-update.js",
+    "/0.cee9d8e81f0813e6dede.hot-update.js": "/0.cee9d8e81f0813e6dede.hot-update.js",
+    "/0.186c0f0325bb28b2bc01.hot-update.js": "/0.186c0f0325bb28b2bc01.hot-update.js",
+    "/0.91203277972ce260d9ad.hot-update.js": "/0.91203277972ce260d9ad.hot-update.js",
+    "/0.a08b4b6102f07cf2c3d2.hot-update.js": "/0.a08b4b6102f07cf2c3d2.hot-update.js",
+    "/0.34aaf7c19740b45ff267.hot-update.js": "/0.34aaf7c19740b45ff267.hot-update.js",
+    "/0.3a5282a37eca6d80a337.hot-update.js": "/0.3a5282a37eca6d80a337.hot-update.js",
+    "/0.7c80d7acf42b329ff087.hot-update.js": "/0.7c80d7acf42b329ff087.hot-update.js",
+    "/0.0efe6b1099daab4a19f9.hot-update.js": "/0.0efe6b1099daab4a19f9.hot-update.js",
+    "/0.710e1d7a0fdd76b24e0e.hot-update.js": "/0.710e1d7a0fdd76b24e0e.hot-update.js",
+    "/0.01f8f29532b93aa62835.hot-update.js": "/0.01f8f29532b93aa62835.hot-update.js",
+    "/0.2b886ae41eff58b50ecc.hot-update.js": "/0.2b886ae41eff58b50ecc.hot-update.js",
+    "/0.44d2f1222b5f5133f01d.hot-update.js": "/0.44d2f1222b5f5133f01d.hot-update.js"
 }
