Votar en el listado de posts

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -10,5 +10,7 @@
     "/0.64a138f0a87ffd859552.hot-update.js": "/0.64a138f0a87ffd859552.hot-update.js",
     "/0.46a311b3abdaccd8ec8d.hot-update.js": "/0.46a311b3abdaccd8ec8d.hot-update.js",
     "/0.a8a32e9ede980d7427b7.hot-update.js": "/0.a8a32e9ede980d7427b7.hot-update.js",
-    "/0.d1fdb0a1756dd2b2a859.hot-update.js": "/0.d1fdb0a1756dd2b2a859.hot-update.js"
+    "/0.d1fdb0a1756dd2b2a859.hot-update.js": "/0.d1fdb0a1756dd2b2a859.hot-update.js",
+    "/0.ab696bbb280c3fb24cb8.hot-update.js": "/0.ab696bbb280c3fb24cb8.hot-update.js",
+    "/0.318a457518605682b77e.hot-update.js": "/0.318a457518605682b77e.hot-update.js"
 }
