Optimizacion de consultas SQL con Eloquent

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,4 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/0.53fb997496526fe02b9b.hot-update.js": "/0.53fb997496526fe02b9b.hot-update.js",
-    "/0.37fe1e2e8d153b784400.hot-update.js": "/0.37fe1e2e8d153b784400.hot-update.js",
-    "/0.503362a1eeb6e4345829.hot-update.js": "/0.503362a1eeb6e4345829.hot-update.js",
-    "/0.41ef2303f63ee087eea4.hot-update.js": "/0.41ef2303f63ee087eea4.hot-update.js"
+    "/css/app.css": "/css/app.css"
 }
